[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "event-pienet"
version = "1.1.3"
description = "PIE-Net: Probabilistic Intensity-Event Modeling for High Quality Event-Based Video Generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vincent Qu"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["event-camera", "video-reconstruction", "deep-learning", "computer-vision", "probabilistic-modeling"]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
realtime = ["dv-processing>=1.7.0"]
eval = ["scikit-image>=0.19.0", "pyiqa>=0.1.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0"]
all = ["dv-processing>=1.7.0", "scikit-image>=0.19.0", "pyiqa>=0.1.0"]

[project.urls]
Homepage = "https://github.com/VincentQQu/pie-net"
Documentation = "https://github.com/VincentQQu/pie-net#readme"
Repository = "https://github.com/VincentQQu/pie-net"
Issues = "https://github.com/VincentQQu/pie-net/issues"

[project.scripts]
pie-net-demo = "pie_net.demo:main"

[tool.setuptools.packages.find]
include = ["pie_net*"]

[tool.setuptools.package-data]
pie_net = ["pretrained/*.pth"]
